# finserv-agent-audit

./: .coverage  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  ARCHITECTURE.md  ASSURANCE-GUIDE.md  AUTONOMY_LADDER.md  CASE_STUDIES.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY-CHECKLIST.md  DISCLAIMER.md  FAILURE-MODES.md  LICENSE  LICENSING.md  LIMITATIONS.md  MANUAL_REMEDIATION_AUTHOR.md  NEGATIVE-USE-CASES.md  NOTICE  OWNERSHIP.md  README.md  RELEASE-INSTRUCTIONS.md  RELEASE-NOTES.md  RESEARCH.md  ROADMAP.md  SECURITY.md  SHIP-RECEIPT.md  VERSIONING.md  WORKED_EXAMPLE.md  action.yml  coverage.xml  demo.sh  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  governance_pattern_request.md  pattern_request.yml
.github/releases/: v1.0.0-notes.md  v1.1.0-notes.md  v1.2.0-notes.md  v1.3.0-notes.md  v2.0.0-notes.md  v2.1.0-notes.md  v2.1.1-notes.md
.github/workflows/: audit-chain-verify.yml  bandit.yml  ci.yml  codeql.yml  gitleaks.yml  osv-scanner.yml  pip-audit.yml  publish.yml
00_Control/: heal_check.sh
00_Control/githooks/: pre-push
deploy/k8s/: README.md
deploy/k8s/crds/: auditchain.yaml  chainsink.yaml  sovereignveto.yaml
deploy/k8s/operator/: Dockerfile  controller.py  networkpolicy.yaml  pvc-sample.yaml  rbac.yaml  (+1 more)
docs/: COHORT_ZERO_PRICING_PUBLIC.md  CO_MAINTAINER_RECRUITMENT_DRAFT.md  DEFCON_ARCHITECTURE.md  ETHICS_WALL.md  LFAI_SANDBOX_APPLICATION_DRAFT.md  MRM_BRIDGE_TEMPLATE.md  PYPI_TRUSTED_PUBLISHING_SETUP.md  SOC2_ENGAGEMENT_RFP.md  TRADEMARK.md  adversarial_testing_guide.md  agentic_ai_governance_maturity_model.md  ai_incident_retrospective_template.md  autonomy_ladder.md  big4_engagement_letter_exhibit.md  bsa_aml_mapping.md  caio_first_90_days_playbook.md  cfpb_ai_lending_supervisory_landscape.md  cfpb_circular_2022_03_mapping.md  cfpb_circular_2023_09_mapping.md  coso_icair_mapping.md  disclosure_artifact_templates.md  dora_mapping.md  ecoa_reg_b_mapping.md  eu_ai_act_aug_2026_compliance_pack.md  eu_ai_act_mapping.md  fcra_reg_v_mapping.md  fsi_settled_matters.md  glba_safeguards_mapping.md  index.md  interagency_mrm_2026_overlay.md  iso_42001_mapping.md  naic_model_bulletin_insurance_mapping.md  nist_ai_600_1_genai_profile_mapping.md  nist_ai_rmf_mapping.md  nydfs_part500_ai_mapping.md  occ_2011_12_mapping.md  pcaob_as_2201_amendments_2026_appendix.md  pe_portfolio_governance_playbook.md  pre_examination_ai_self_assessment.md  sec_17a_4_mapping.md  (+6 more)
docs/adr/: 0001-defcon-state-machine.md  0002-sovereign-veto.md  0003-hash-chain-audit.md  0004-autonomy-ladder-a0-a4.md  0005-eu-ai-act-mapping.md  0006-shadow-mode-rollout.md  0007-sr-11-7-overlay.md  0008-glba-safeguards.md  0009-fcra-reg-v-adverse-action.md  0010-ecoa-reg-b-fair-lending.md  0011-bsa-aml-sar-workflow.md  0012-sox-404-itgc.md  0013-sec-17a-4-worm.md  0014-persistence-witness-timestamp-pattern.md  0015-mi-proxy-module-integrity.md  0016-vendor-score-gate.md  0017-audit-chain-retention-privilege-discovery.md  0018-adversarial-agent-threat-model.md  0019-protected-class-proxy-detector-deferred.md  0020-lda-search.md  0021-llm-disparate-impact-harness.md  0022-effective-challenge-harness.md  0023-vendor-attestation-ledger.md  0024-retraining-cadence-monitor.md  0025-deprecation-watch.md  0026-customer-facing-chatbot-guardrail.md  0027-a2a-adapter.md  0028-langgraph-adapter.md  0029-maf-adapter.md  0030-crewai-adapter.md  0031-aibom-generator.md  0032-governance-api.md  0033-kubernetes-operator.md  0034-adversarial-test-pack.md  ci-self-heal-loop.md
docs/tier1_buyer_prefills/: BITS_AUP_PREFILL.md  CAIQ_PREFILL.md  SIG_LITE_PREFILL.md
examples/: __init__.py  defcon_state_machine.py  demotion_gate_demo.py  portfolio_governance_dashboard.py
examples/agent_coordination/: README.md  __init__.py  coordination.py
examples/evidence_pack_sample/: README.md  audit_consumer_attestation.md  failure_modes_matrix_snapshot.md  model_inventory_export.csv  sample_audit_chain.jsonl  vendor_scores_log.csv  walkthrough.md
examples/integration/: __init__.py  aws_dynamo_ledger_store.py  datadog_audit_sink.py  mcp_server.py  sigstore_rekor_witness_demo.py  splunk_audit_sink.py
finserv_agent_audit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
patterns/: __init__.py  sovereign_veto.py
schemas/: __init__.py  audit_event.py
scripts/: banned_names_lint.py  banned_term_lint.py  ci_watch.py  maturity_self_score.py  tamper_language_lint.py
src/finserv_agent_audit/: __init__.py  cli.py
tests/: doc_staleness_allow_list.py  test_a2a_adapter.py  test_adverse_action_gate.py  test_agent_coordination_example.py  test_agents.py  test_aibom.py  test_audit_chain.py  test_audit_consumer.py  test_audit_event_immutable.py  test_authority_lifecycle.py  test_autonomy_ladder.py  test_banned_names_lint.py  test_best_interest_check.py  test_cli.py  test_concurrent_append.py  test_crewai_adapter.py  test_customer_facing_chatbot_guardrail.py  test_defcon_metrics_in_hash.py  test_defcon_state_machine.py  test_demotion_gate_demo.py  test_deprecation_watch.py  test_doc_staleness.py  test_effective_challenge_harness.py  test_equity_audit.py  test_external_anchor_verify.py  test_failure_modes_matrix.py  test_genesis_domain_separation.py  test_golden_corpus_fair_lending.py  test_governance_api.py  test_langgraph_adapter.py  test_lda_search.py  test_ledger_store_inmemory.py  test_ledger_store_jsonl.py  test_ledger_store_sqlite.py  test_ledger_store_worm.py  test_llm_disparate_impact_harness.py  test_load_recomputes_hash.py  test_maf_adapter.py  test_mi_proxy.py  test_model_inventory.py  (+18 more)
tests/adversarial/: __init__.py  test_al_probes.py  test_audit_chain_resilience.py
vendor-clauses/: aml_transaction_monitoring_vendor_clauses.md  credit_decision_vendor_clauses.md  foundation_model_api_vendor_clauses.md  fraud_score_vendor_clauses.md  kyc_vendor_clauses.md  robo_advisor_vendor_clauses.md
(+58 files in other folders)
