[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["finserv_agent_audit*", "schemas*", "patterns*", "examples*"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.setuptools.package-dir]
"" = "src"
"schemas" = "schemas"
"patterns" = "patterns"
"examples" = "examples"

[project]
name = "finserv-agent-audit"
version = "1.3.0"
description = "Governance patterns for autonomous AI agents in regulated financial services"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kunjar Bhaduri", email = "130852583+linus10x@users.noreply.github.com" }
]
keywords = [
    "ai-governance",
    "autonomous-agents",
    "fintech",
    "regulated-ai",
    "audit-trail",
    "eu-ai-act",
    "financial-services",
    "compliance",
    "kill-switch",
    "human-in-the-loop",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = []  # Zero runtime dependencies

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "mypy>=1.14",
    "ruff>=0.8",
    "pre-commit>=3.7",
]
# Optional ecosystem-onramp dependencies (v1.2). These are NOT runtime deps;
# the import-guard pattern in src/finserv_agent_audit/integrations/* and
# examples/integration/mcp_server.py keeps the base wheel dependency-free.
mcp = ["mcp>=0.9"]
otel = ["opentelemetry-api>=1.27", "opentelemetry-sdk>=1.27"]
all-integrations = [
    "mcp>=0.9",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[project.scripts]
finserv-audit = "finserv_agent_audit.cli:main"

[project.urls]
Homepage = "https://github.com/linus10x/finserv-agent-audit"
Repository = "https://github.com/linus10x/finserv-agent-audit"
Issues = "https://github.com/linus10x/finserv-agent-audit/issues"
Changelog = "https://github.com/linus10x/finserv-agent-audit/blob/main/CHANGELOG.md"
Discussions = "https://github.com/linus10x/finserv-agent-audit/discussions"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"examples/*" = ["ANN"]
"examples/integration/*" = ["ANN", "N818"]
"schemas/*" = ["ANN"]
"patterns/*" = ["ANN"]
"scripts/*" = ["ANN", "SIM", "N816"]


[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
    "network: tests that hit external network (e.g. Sigstore Rekor public-good); default-skipped unless FINSERV_AUDIT_NETWORK_TESTS=1",
]

[tool.coverage.run]
source = ["src/finserv_agent_audit", "examples", "schemas", "patterns"]
omit = [
    "tests/*",
    # Reference integration sinks require live external services (Splunk HEC,
    # cloud endpoints). They ship as documented reference patterns and are
    # exercised in dedicated integration tests gated by env var, not the
    # default unit-test suite.
    "examples/integration/*",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
