[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["finserv_agent_audit*", "schemas*", "patterns*", "examples*"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.setuptools.package-dir]
"" = "src"
"schemas" = "schemas"
"patterns" = "patterns"
"examples" = "examples"

[project]
name = "finserv-agent-audit"
version = "2.0.0"
description = "Governance patterns for autonomous AI agents in regulated financial services"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kunjar Bhaduri", email = "130852583+linus10x@users.noreply.github.com" }
]
keywords = [
    "ai-governance",
    "autonomous-agents",
    "fintech",
    "regulated-ai",
    "audit-trail",
    "eu-ai-act",
    "financial-services",
    "compliance",
    "kill-switch",
    "human-in-the-loop",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = []  # Zero runtime dependencies

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "mypy>=1.14",
    "ruff>=0.8",
    "pre-commit>=3.7",
]
# Optional ecosystem-onramp dependencies (v1.2 + v2.0). These are NOT
# runtime deps; the import-guard pattern in
# src/finserv_agent_audit/integrations/* and
# examples/integration/mcp_server.py keeps the base wheel dependency-free.
mcp = ["mcp>=0.9"]
otel = ["opentelemetry-api>=1.27", "opentelemetry-sdk>=1.27"]
# v2.0 agentic-runtime adapter extras. Each adapter import-guards its
# upstream SDK behind a HAS_X boolean so the base install stays
# zero-runtime-dependency. Pin floors set to the first SDK release with
# stable typing + the production-traffic surfaces the adapters wrap.
a2a = ["a2a-sdk>=1.0"]
langgraph = ["langgraph>=1.0"]
maf = ["agent-framework>=1.0"]
crewai = ["crewai>=0.140"]
# v2.0 FastAPI governance endpoint extra (ADR-0032). The REST surface
# is opt-in; adopters wiring DEFCON / veto-log / audit-chain verification
# over HTTP install `[api]` to pull FastAPI + Uvicorn + httpx (the test
# client's HTTP backend). SSE streaming uses Starlette's built-in
# StreamingResponse — no extra dependency needed.
api = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]
# Convenience bundle for adopters who want every agentic-runtime adapter
# without naming each extra individually.
all-agentic = [
    "a2a-sdk>=1.0",
    "langgraph>=1.0",
    "agent-framework>=1.0",
    "crewai>=0.140",
]
all-integrations = [
    "mcp>=0.9",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "a2a-sdk>=1.0",
    "langgraph>=1.0",
    "agent-framework>=1.0",
    "crewai>=0.140",
    "fastapi>=0.136",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[project.scripts]
finserv-audit = "finserv_agent_audit.cli:main"

[project.urls]
Homepage = "https://github.com/linus10x/finserv-agent-audit"
Repository = "https://github.com/linus10x/finserv-agent-audit"
Issues = "https://github.com/linus10x/finserv-agent-audit/issues"
Changelog = "https://github.com/linus10x/finserv-agent-audit/blob/main/CHANGELOG.md"
Discussions = "https://github.com/linus10x/finserv-agent-audit/discussions"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"examples/*" = ["ANN"]
"examples/integration/*" = ["ANN", "N818"]
"schemas/*" = ["ANN"]
"patterns/*" = ["ANN"]
"scripts/*" = ["ANN", "SIM", "N816"]


[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
    "network: tests that hit external network (e.g. Sigstore Rekor public-good); default-skipped unless FINSERV_AUDIT_NETWORK_TESTS=1",
]

[tool.coverage.run]
source = ["src/finserv_agent_audit", "examples", "schemas", "patterns"]
omit = [
    "tests/*",
    # Reference integration sinks require live external services (Splunk HEC,
    # cloud endpoints). They ship as documented reference patterns and are
    # exercised in dedicated integration tests gated by env var, not the
    # default unit-test suite.
    "examples/integration/*",
    # v2.0 agentic-runtime adapters (a2a, langgraph, maf, crewai) wrap
    # third-party agent frameworks. The frameworks are opt-in dependencies
    # (extras [a2a]/[langgraph]/[maf]/[crewai]/[all-agentic]); CI does not
    # install them. Default test suite exercises the import-guard fallback;
    # live-integration paths are exercised in deployer CI with the extras
    # installed. Pattern matches examples/integration/* above.
    "src/finserv_agent_audit/integrations/a2a_adapter.py",
    "src/finserv_agent_audit/integrations/langgraph_adapter.py",
    "src/finserv_agent_audit/integrations/maf_adapter.py",
    "src/finserv_agent_audit/integrations/crewai_adapter.py",
    # PE-portfolio dashboard is a reference operator script (parallel to
    # examples/integration/*), not a unit-tested module.
    "examples/portfolio_governance_dashboard.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
